--- a/frontend/src/app-styles.css
+++ b/frontend/src/app-styles.css
@@ -14,7 +14,7 @@
 }
 
 .shop-title {
-  font-family: var(--font-family);
+  font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 54px;
   line-height: 120%;
