--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1912,9 +1912,12 @@ img {
 }
 
 .shop-title {
-  font-size: 40px;
+  font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  margin-bottom: 40px;
+  font-size: 54px;
+  line-height: 120%;
+  color: #222;
+  margin-bottom: 32px;
 }
 
 .shop-tabs {
