--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2537,6 +2537,7 @@ img {
 .controller-layout {
   margin-top: 56px;
   display: flex;
+  gap: 90px;
 }
 
 .controller-list {
@@ -2575,18 +2576,19 @@ img {
 .controller-content-wrap {
   flex: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 110px;
 }
 
 .controller-content {
   max-width: 820px;
-  margin-left: 60px;
+  margin-left: 0;
 }
 
 .controller-page-toc {
   padding-top: 0;
   min-width: 180px;
-  margin-left: 110px;
+  margin-left: 0;
 }
 
 .controller-page-toc-title {
@@ -2719,7 +2721,7 @@ img {
   margin-top: 40px;
   display: block;
   width: 100%;
-  max-width: 520px;
+  max-width: 620px;
 }
 
 .support-topic {
